re styled footer link images so that they fit inline and stop page overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,28 +336,15 @@ a:hover {
 
 /*---------------------------------------------------------Footer*/
 
-.footer-image {
-    display: block;
-    max-height: 250px;
-    max-width: 250px;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-.footer-image-bl {
-    display: block;
-    max-height: 150px;
+footer-container {
     max-width: 150px;
-    margin: 0 auto;
-    padding: 50px;
 }
 
-.footer-image-fw {
-    display: block;
-    max-height: 250px;
-    max-width: 250px;
+.footer-image {
+    display: inline-block;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 50px;
+    vertical-align: middle;
 }
 
 .footer-description {
@@ -385,7 +372,7 @@ a:hover {
 }
 
 .footer-logo {
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 100%;
 }
